# registry

./: .gitignore  Cargo.toml  README.md  STORAGE.md  TODO
src/: app.rs  extractors.rs  handlers.rs  lib.rs  main.rs  models.rs  operations.rs  packument.rs  rusoto_surf.rs  stores.rs
src/auth/: mod.rs  scheme.rs  storage.rs
src/handlers/: v1.rs
src/middleware/: authn.rs  logging.rs  mod.rs
src/models/: package_identifier.rs  packument.rs
src/operations/: mod.rs  not_implemented.rs  policy.rs
src/operations/authenticator/: mod.rs  oauth.rs
src/operations/package_storage/: read_through.rs  remote.rs
src/operations/token_authorizer/: in_memory.rs  mod.rs
src/operations/user_storage/: in_memory.rs  mod.rs
src/policies/: policy.rs
src/policies/authenticator/: mod.rs  oauth.rs
src/policies/configurator/: env.rs  mod.rs
src/policies/package_storage/: mod.rs  read_through.rs  remote.rs
src/policies/token_authorizer/: in_memory.rs
src/policies/user_storage/: mod.rs
src/stores/: cacache.rs  chained.rs  guard.rs  mod.rs  readthrough.rs  redis_cache.rs  remote.rs  s3.rs
