[package]
name = "npm-registry"
version = "0.1.0"
authors = ["Chris Dickinson <christopher.s.dickinson@gmail.com>"]
edition = "2018"

[dependencies]
thiserror = "1.0.11"
anyhow = "1.0.26"
async-trait = "0.1.24"
tide = "0.8.0"
tracing = { version = "0.1.12", features = [ "log" ] }
log = "0.4.8"
simple_logger = "1.5.0"
futures = { version = "0.3.4", features = ["compat", "io-compat"] }
surf = { git = "https://github.com/chrisdickinson/surf", rev="header-names" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.48"
chrono = { version = "0.4", features = ["serde"] }
http-types = "1.2.0"
json_logger = "0.1.0"
url = "2.1.1"
redis = { git = "https://github.com/mitsuhiko/redis-rs" }
http = "0.2.1"
bytes = "0.5.4"
tokio = "0.2.20"

[dependencies.async-std]
version = "1.5.0"
features = ["attributes"]

[dependencies.rusoto_core]
version = "0.43"
default-features = false
features = [ "rustls" ]

[dependencies.rusoto_s3]
version = "0.43"
default-features = false
features = [ "rustls" ]

[dependencies.rusoto_credential]
version = "0.43"
