[package]
name = "registry"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aide = { version = "0.10.0", features = ["axum", "macros", "serde_qs"] }
anyhow = "1.0.70"
axum = "0.6.12"
base64 = "0.21.0"
chrono = { version = "0.4.24", features = ["serde"] }
schemars = { version = "0.8.12", features = ["chrono", "url"] }
semver = "1.0.17"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
tar = "0.4.38"
thiserror = "1.0.40"
tokio = { version = "1.27.0", features = ["tracing", "fs", "net", "time", "bytes", "tokio-macros", "rt"] }
url = { version = "2.3.1", features = ["serde"] }
