[package]
name = "registry"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aide = { version = "0.10.0", features = ["axum", "macros", "serde_qs"] }
anyhow = "1.0.70"
async-stream = "0.3.5"
async-trait = "0.1.68"
atty = "0.2.14"
axum = "0.6.19"
base64 = "0.21.0"
cacache = { version = "11.6.0", default-features = false, features = ["tokio-runtime"] }
chrono = { version = "0.4.24", features = ["serde"] }
futures = "0.3.28"
futures-util = "0.3.28"
io_tee = "0.1.1"
itertools = "0.11.0"
libflate = "2.0.0"
listenfd = "1.0.1"
reqwest = { version = "0.11.18", features = ["json", "stream"] }
rudy = "0.1.0"
schemars = { version = "0.8.12", features = ["chrono", "url"] }
semver = "1.0.17"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
tar = "0.4.38"
thiserror = "1.0.40"
tokio = { version = "1.27.0", features = ["tracing", "fs", "net", "time", "bytes", "tokio-macros", "rt", "macros", "rt-multi-thread", "full"] }
tokio-util = { version = "0.7.8", features = ["full"] }
tower = "0.4.13"
tracing = "0.1.37"
tracing-futures = { version = "0.2.5", features = ["tokio"] }
tracing-subscriber = { version = "0.3.16", features = ["json", "time", "env-filter"] }
url = { version = "2.3.1", features = ["serde"] }
urlencoding = "2.1.3"
